# portfolio-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  runner.py
config/: strategy.yaml
deploy/: portfolio-agent.service  setup_vps.sh
scripts/: setup_db.py
src/: __init__.py  agent.py  data_engine.py  db.py  execution_engine.py  logging_config.py  models.py  reporter.py  risk_manager.py  strategy_engine.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
