[project]
name = "portfolio-agent"
version = "0.1.0"
description = "Automatizirani Portfolio Manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "alpaca-trade-api>=3.0.2",
    "pandas>=2.1",
    "numpy>=1.26",
    "yfinance>=0.2.31",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "loguru>=0.7",
    "apscheduler>=3.10",
    "backtrader>=1.9",
    "pyarrow>=14.0",
    "quantstats>=0.0.62",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
